# Ypso

./: .env.example  .gitignore  CLAUDE.md  README.md  data_extract.py  device_profiles.py  pairing.py  play_integrity.py  pumpcli.py  pyproject.toml  requirements.txt  ypsopump-server.service
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ypsopump/app/: IntegrityTokenClient.kt  MainActivity.kt  PumpBleConstants.kt  PumpBleManager.kt  PumpCrypto.kt  PumpSessionManager.kt  YpsomedGrpcClient.kt
android/app/src/main/proto/: ypsomed_service.proto
android/app/src/main/res/values/: themes.xml
kotlin/: IntegrityTokenClient.kt  PairingExample.kt  PumpBleConstants.kt  PumpPairingOrchestrator.kt  PumpSessionManager.kt  YpsomedGrpcClient.kt
proto/: encrypt_key.proto  keyexchange_pb2.py  keyexchange_pb2_grpc.py  nonce.proto
pump/: __init__.py  cache.py  constants.py  crc.py  crypto.py  entries.py  glb.py  lock.py  sdk.py  utils.py
scripts/: integrity_token.ts
server/: auth.py  config.py  main.py
