[project]
name = "ypsopump-server"
version = "0.1.0"
description = "REST API server for YpsoPump Play Integrity token service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0",
    "frida>=16.0.0",
]

[project.scripts]
ypsopump-server = "server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
